Updated code to make sure the tab unmutes when not on the Twitch homepage. Also removed debug code.

--- a/mute.html
+++ b/mute.html
@@ -1,9 +1,6 @@
 <!doctype html>
-<!--
- This page is shown when the extension button is clicked, because the
- "browser_action" field in manifest.json contains the "default_popup" key with
- value "popup.html".
- -->
+<!-- This page is shown when the extension button is clicked, because the
+ "browser_action" field in manifest.json contains the "default_popup" key with value "mute.html". -->
 <html>
 	<head>
     	<title>Getting Started Extension's Popup</title>
@@ -29,7 +26,6 @@
 	      	}
 
 	      	.button {
-	     		/*background-color: #FF0047;*/
 	     		padding: 8px 16px;
 	     		display: inline-block;
 	     		text-decoration: none;
@@ -37,10 +33,6 @@
 	     		border-radius: 3px;
 	     		width: 100%;
 	      	}
-
-	      	/*.button:hover { 
-	      		background-color: #AB0030;
-	      	}*/
 
 	      	.button.mute {
 	      		background-color: #03BC41;
