--- a/mute.html
+++ b/mute.html
@@ -14,14 +14,25 @@
 	        	font-size: 15px;
 	      	}
 
-	      	#container {
+	      	#info-container {
+	        	align-items: center;
+	        	display: flex;
+	        	flex-direction: column;
+	      	}
+
+	      	#non-twitch-container {
+	        	align-items: center;
+	        	display: flex;
+	      	}
+
+	      	#twitch-container {
 	        	align-items: center;
 	        	display: flex;
 	        	flex-direction: column;
 	        	justify-content: space-between;
 	      	}
 
-	      	.container-element {
+	      	.twitch-container-element {
 	      		padding: 5px 0;
 	      	}
 
@@ -61,15 +72,20 @@
   	</head>
 
   	<body>
-    	<h1>Mute Twitch Homepage</h1>
-    	<div id="container">
-    		<div class="container-element">
+  		<div id="info-container">
+  			<h1>Mute Twitch Homepage</h1>
+  		</div>
+    	<div id="twitch-container">
+    		<div class="twitch-container-element">
     			<label>Permanently Mute</label>
     			<input type="checkbox" id="js-mute-perm" />
     		</div>
-    		<div class="container-element">
+    		<div class="twitch-container-element">
     			<button type="button" id="js-mute-temp" class="button unmute">Temporarily Mute</button>
     		</div>
+    	</div>
+    	<div id="non-twitch-container">
+    		<p>This extension only works on the <a id="twitch-link" href="https://go.twitch.tv/">Twitch Homepage</a></p>
     	</div>
   	</body>
 </html>
