Updated extension to work on www.twitch.tv instead of go.twitch.tv.

--- a/mute.html
+++ b/mute.html
@@ -85,7 +85,7 @@
     		</div>
     	</div>
     	<div id="non-twitch-container">
-    		<p>This extension only works on the <a id="twitch-link" href="https://go.twitch.tv/">Twitch Homepage</a></p>
+    		<p>This extension only works on the <a id="twitch-link" href="https://www.twitch.tv/">Twitch Homepage</a></p>
     	</div>
   	</body>
 </html>
